# editor

./: Cargo.toml  Makefile  README.md  shell.nix
editor-core/: Cargo.toml
editor-core/src/: buffer.rs  command.rs  lib.rs  word.rs
editor-motion/: Cargo.toml
editor-motion/src/: lib.rs  motion.rs  statemachine.rs
editor-tui/: Cargo.toml
editor-tui/src/: editor.rs  main.rs  test.rs  tui.rs  ui.rs  widgets.rs  window.rs
src/: app.rs  buffer.rs  colors.rs  command.rs  editor.rs  main.rs  motion.rs  rope.rs  test.rs  tui.rs  ui.rs  widgets.rs  window.rs  word.rs
