[package]
name = "editor-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "editor"
path = "src/main.rs"

[dependencies]
editor-core = { path = "../editor-core" }
editor-motion = { path = "../editor-motion" }

color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.29"
ratatui = { version = "0.24.0", features = ["all-widgets"] }
tokio = { version = "1", features = ["full"] }
